---
config:
  theme: default
---
classDiagram
class Formateur {
  int id
  string nom
  string email
  string password
}
class Responsable {
  int ida
  string nom
  string email
  string password
}
class Module {
  int id
  string nom
  int masse_horaire_totale
}
class Session {
  int id
  date date
  time heure_debut
  time heure_fin
  int duree
  string etat_validation
  int formateur_id
  int module_id
  int responsable_id
}
Formateur "1" --> "*" Session
Module "1" --> "*" Session
Responsable "1" --> "*" Session
